trunk/cprover/regression/upgrade/buggy-cases.txt
Bug reports in upgrade checking

ex9-double-summary.*  in lra asserin fails in solving process;in prop we need to impl. substitute_negate_insert


ex14-change-*   hits the following assert:
Assertion failed: (clause_to_proof_der.find( res ) == clause_to_proof_der.end( )), function endChain, file /Users/sepidehasadi/2phd/dev/opensmt2/src/smtsolvers/Proof.C, line 221.


ex15-change-*
It should be safe, but it is not!

ex16-change-*     hits this:
Assertion failed: (clause_to_proof_der.find( res ) == clause_to_proof_der.end( )), function endChain, file /Users/sepidehasadi/2phd/dev/opensmt2/src/smtsolvers/Proof.C, line 221.


ex17-change-*. In LRA hits:
Assertion failed: (symbols.size() == static_cast<std::size_t>(args.size())), function instantiate, file /Users/sepidehasadi/2phd/dev/hifrog/trunk/cprover/src/funfrog/solvers/smtcheck_opensmt2.cpp, line 643.


ex18-change-orig.c 
libc++abi.dylib: terminating with uncaught exception of type std::logic_error: Argument name read from summary do not match expected symbol name!
Expected symbol name: a
Name read from summary: b